HW - Java Collections Framework: Set сделал исправления